[gd_scene load_steps=5 format=3 uid="uid://bcie26b6i36hi"]

[ext_resource type="Script" path="res://Scripts/Main_Menu.gd" id="1_hn81m"]
[ext_resource type="PackedScene" uid="uid://bnqa3d4ofly5k" path="res://Scenes/Settings.tscn" id="2_8p0s1"]
[ext_resource type="Theme" uid="uid://dchsfnmpldp4" path="res://Resources/Themes/Menu_Button_Bold.tres" id="2_sux1n"]
[ext_resource type="PackedScene" uid="uid://cgy7st1hukwkw" path="res://Scenes/Save-Load.tscn" id="4_ypn0w"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hn81m")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
offset_top = 620.0
offset_right = 640.0
offset_bottom = 670.0
scale = Vector2(3, 3)
theme = ExtResource("2_sux1n")
ratio = 2.5

[node name="Button" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
text = "Play"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
offset_top = 781.0
offset_right = 960.0
offset_bottom = 831.0
scale = Vector2(2, 2)
theme = ExtResource("2_sux1n")
ratio = 2.5

[node name="Button" type="Button" parent="AspectRatioContainer2"]
layout_mode = 2
text = "Settings"

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="."]
offset_top = 895.0
offset_right = 960.0
offset_bottom = 945.0
scale = Vector2(2, 2)
theme = ExtResource("2_sux1n")
ratio = 2.5

[node name="Button" type="Button" parent="AspectRatioContainer3"]
layout_mode = 2
text = "Quit
"

[node name="Settings" parent="." instance=ExtResource("2_8p0s1")]
visible = false

[node name="Save-Load" parent="." instance=ExtResource("4_ypn0w")]
visible = false

[connection signal="pressed" from="AspectRatioContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer2/Button" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="AspectRatioContainer3/Button" to="." method="_on_button3_pressed"]
